--- a/src/main/resources/templates/search/results.html
+++ b/src/main/resources/templates/search/results.html
@@ -10,7 +10,7 @@
 
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
-    <form th:action="@{/search/results}" method = "post">
+    <form method = "post">
         <h2>Search by:</h2>
 
         <p>
@@ -36,18 +36,20 @@
     <hr />
 
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
-    <table class = "job-listing" th:each = "job: ${jobs}">
-        <tr>
-            <td>
-                <p th:text = "'ID: ' + ${job.id}"></p>
-                <p th:text ="'Name:' + ${job.name}"></p>
-                <p th:text =" 'Employer: '+ ${job.employer}"></p>
-                <p th:text ="'Location: '+ ${job.location}"></p>
-                <p th:text ="'Position Type: '+ ${job.positionType}"></p>
-                <p th:text ="'Skills: '+ ${job.coreCompetency}"></p>
-            </td>
-        </tr>
-    </table>
+    <div th:replace="fragments :: search-table"></div>
+
+<!--    <table class = "job-listing" >-->
+<!--        <tr th:each = "job: ${jobs}">-->
+<!--            <td>-->
+<!--                <p th:text = "'ID: ' + ${job.id}"></p>-->
+<!--                <p th:text ="'Name:' + ${job.name}"></p>-->
+<!--                <p th:text =" 'Employer: '+ ${job.employer}"></p>-->
+<!--                <p th:text ="'Location: '+ ${job.location}"></p>-->
+<!--                <p th:text ="'Position Type: '+ ${job.positionType}"></p>-->
+<!--                <p th:text ="'Skills: '+ ${job.coreCompetency}"></p>-->
+<!--            </td>-->
+<!--        </tr>-->
+<!--    </table>-->
 
 </div>
 
