--- a/src/main/resources/templates/search/results.html
+++ b/src/main/resources/templates/search/results.html
@@ -38,6 +38,19 @@
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
     <div th:replace="fragments :: search-table"></div>
 
+<!--    <table class = "job-listing" >-->
+<!--        <tr th:each = "job: ${jobs}">-->
+<!--            <td>-->
+<!--                <p th:text = "'ID: ' + ${job.id}"></p>-->
+<!--                <p th:text ="'Name:' + ${job.name}"></p>-->
+<!--                <p th:text =" 'Employer: '+ ${job.employer}"></p>-->
+<!--                <p th:text ="'Location: '+ ${job.location}"></p>-->
+<!--                <p th:text ="'Position Type: '+ ${job.positionType}"></p>-->
+<!--                <p th:text ="'Skills: '+ ${job.coreCompetency}"></p>-->
+<!--            </td>-->
+<!--        </tr>-->
+<!--    </table>-->
+
 </div>
 
 </body>
